[package]
name = "efficiency-benchmark"
version = "0.2.0"
edition = "2021"
description = "A simple benchmarking tool for measuring the efficiency of your laptop."
license = "MIT"
repository = "https://github.com/LOSEARDES77/efficiency-benchmark.git"
keywords = ["benchmark", "efficiency", "laptop", "battery", "power" ]
categories = ["cli", "utility", "benchmark", "efficiency", "measurements" ]

[dependencies]
battery = "0.7.8"
chrono = "0.4.37"
colored = "2.1.0"
